--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "superagent": "^6.1.0"
