--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.2.0",
     "superagent": "^6.1.0"
   },
   "scripts": {
